<resources>
    <string name="app_name">Bayae</string>
    <string name="game_select">游戏</string>
    <string name="game_name">填词勇士</string>
    <string name="game_next">下一个</string>
    <string name="game_text">n.因素，要素</string>
    <string name="finish">已完成</string>
    <string name="rest_chance">剩余机会:</string>
    <string name="chance">5</string>
    <string name="background_photo">背景图片</string>
    <string name="Return">返回</string>
    <string name="icon">图标</string>
    <string name="right">0</string>
    <string name="all">10</string>
    <string name="divider">/</string>
    <string name="run_tip">勇士出发中</string>
    <string name="stem">要考试了，浚颖想知道：背也能不能按时完成？</string>
</resources>
