<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/game"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/game_one_name"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/colorPrimary">

            <ImageButton
                android:id="@+id/ib_title_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="13dp"
                android:background="@null"
                android:contentDescription="@string/Return"
                android:src="@drawable/return_button" />

            <TextView
                android:id="@+id/game_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/game_name"
                android:textColor="#fff"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/game_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="5dp"
                android:text="@string/game_next"
                android:textColor="@color/colorPureWhite"
                android:textSize="22sp" />

        </RelativeLayout>

    <RelativeLayout
        android:id="@+id/game_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/game_one_name">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="272dp"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="0dp"
            android:text="@string/game_text"
            android:textColor="@color/colorPrimaryText"
            android:textSize="25sp" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/textView2"
            android:layout_marginTop="0dp"
            android:background="@color/colorDivider" />

        <EditText
            android:id="@+id/editword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider2"
            android:layout_alignTop="@id/divider2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="200dp"
            android:inputType="text"
            android:minWidth="100dp" />

        <RelativeLayout
            android:id="@+id/bottomtext"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp">

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="0dp"
                android:background="@color/colorDivider" />

            <TextView
                android:id="@+id/finish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="11dp"
                android:text="@string/finish"
                android:textColor="@color/colorPrimaryText"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/finish_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="75dp"
                android:text="@string/right"
                android:textColor="@color/colorPrimaryText"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="90dp"
                android:text="@string/divider"
                android:textColor="@color/colorPrimaryText"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="100dp"
                android:text="@string/all"
                android:textColor="@color/colorPrimaryText"
                android:textSize="20sp" />

            <ProgressBar
                android:id="@+id/progressBar2"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@id/textView5"
                android:layout_centerVertical="true"
                android:layout_marginEnd="15dp"
                android:text="@string/rest_chance"
                android:textColor="@color/colorPrimaryText"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="6dp"
                android:text="@string/chance"
                android:textColor="@color/colorPrimaryText"
                android:textSize="20sp" />

        </RelativeLayout>
    </RelativeLayout>

    </RelativeLayout>