<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <RelativeLayout
        android:id="@+id/game_one_name"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorPrimary">

        <ImageButton
            android:id="@+id/ib_title_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="13dp"
            android:background="@null"
            android:contentDescription="@string/Return"
            android:src="@drawable/return_button" />

        <TextView
            android:id="@+id/game_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="false"
            android:text="@string/game_select"
            android:textColor="#fff"
            android:textSize="22sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/game_one"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@id/game_one_name">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:background="@drawable/writeword"
            android:contentDescription="@string/icon"
            android:visibility="visible" />

        <TextView
            android:id="@+id/game_name_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/imageView"
            android:layout_centerVertical="true"
            android:layout_marginStart="60dp"
            android:text="@string/game_name"
            android:textColor="@color/colorPrimaryText"
            android:textSize="22sp" />
    </RelativeLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/game_one"
        android:background="@color/colorSecondaryText" />

</RelativeLayout>
