<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <RelativeLayout
        android:id="@+id/game_one_name"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorPrimary">

        <ImageButton
            android:id="@+id/ib_title_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="13dp"
            android:background="@null"
            android:contentDescription="@string/Return"
            android:src="@drawable/return_button" />

        <TextView
            android:id="@+id/game_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/game_name"
            android:textColor="#fff"
            android:textSize="22sp" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="373dp"
        android:layout_height="382dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:background="@drawable/fightdragon"
        tools:layout_below="@id/game_one_name" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="400dp"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:max="100"
        android:progressTint="#3F51B5" />

    <TextView
        android:id="@+id/run_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/progressBar"
        android:layout_centerHorizontal="true"
        android:text="@string/run_tip"
        android:textSize="20sp" />

</RelativeLayout>
